--- a/README
+++ b/README
@@ -1,3 +1,20 @@
-El proposito de este repositorio es el desarrollo de una aplicacion VoIP para un proyecto universitorio
+                                             ************************************************
+                                             *                                              *
+                                             *  D-Light VoIP                                *
+                                             *                                              *
+                                             *  Equipo                                      *
+                                             *         Fabrizio Cabaleiro                   *
+                                             *         Gabriel Juri                         *
+                                             *         Carlos Ibañes                        *
+                                             *                                              *
+                                             ************************************************
 
-The purpose of this repo is to develop a VoIP application for a university's project
+
+Para compilar D-Light VoIP estando en su emulador de terminal preferido, valla hacia la ruta en donde se encuentran este mismo 
+archivo, luego ejecute el comando:
+
+  $  make
+
+Esto compilara el modulo principal del proyecto, luego para usar los programas de alsa para el modulo de sonido, tiene que ir
+a los directorios encode y decode y leer los README correspondientes. En el caso de usar el programa sox para el sonido, tiene
+que tener el paquete sox instalado.
