Keeping a little update the README

--- a/README
+++ b/README
@@ -14,3 +14,9 @@ person that you want to speek to.
 D-Light VoIP is not for the regular computer
 user, it is designed to be not easy to use
 but fast and light.
+
+##########################################
+13/03/2013
+There is no updates in this repository for a
+long time, but, I hope to start working on 
+this project in the future
